@@ -39,8 +39,8 @@
 			<AccuracyLong>0.45</AccuracyLong>
 			<RangedWeapon_Cooldown>3.0</RangedWeapon_Cooldown>
 		</statBases>
-		<weaponTags>
-			<li>SimpleGun</li>
+		<weaponTags Inherit="False">
+		  <li>FatteningGun</li>
 		</weaponTags>
 		<weaponClasses>
 			<li>RangedLight</li>
